--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "docker-compose -f docker-compose.dev.yml up",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
