--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
         ],
         "no-tabs": "off",
         "import/prefer-default-export": "off",
+        "react/jsx-closing-bracket-location": "off",
+        "comma-dangle": "off",
         "semi": [2, "never"],
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
